--- a/main/assets/css/base/_buttons.scss
+++ b/main/assets/css/base/_buttons.scss
@@ -5,6 +5,7 @@
   .btn { // basic button style
     position: relative;
     display: inline-flex;
+    gap: 24px;
     justify-content: center;
     align-items: center;
     white-space: nowrap;
