--- a/main/assets/css/style.css
+++ b/main/assets/css/style.css
@@ -7052,4 +7052,16 @@ Usage: codyhouse.co/license
 .list--border ul, .list--border ol {
   border-top: 1px solid hsla(var(--color-contrast-higher-h), var(--color-contrast-higher-s), var(--color-contrast-higher-l), 0.15); }
 
+.nav-bar {
+  padding: 3.5rem 0;
+  display: flex;
+  align-items: center; }
+  .nav-bar__logo {
+    margin-right: 5.875rem; }
+
+.nav {
+  display: grid;
+  grid-auto-flow: column;
+  gap: 3.5rem; }
+
 /*! purgecss end ignore */
