--- a/main/assets/css/custom-style/_shared-styles.scss
+++ b/main/assets/css/custom-style/_shared-styles.scss
@@ -1,8 +1,14 @@
 .container-outer {
+  --outer-container-column: 8.5%;
   display: grid;
-  grid-template-columns: 11.45% 1fr 11.45%;
+  grid-template-columns: var(--outer-container-column) 1fr var(--outer-container-column);
 
   > * {
     grid-column: 2;
+    background-color: green;
+  }
+
+  @include breakpoint(sm) {
+    --outer-container-column: 11.45%;
   }
 }
