--- a/main/assets/css/style.css
+++ b/main/assets/css/style.css
@@ -6800,10 +6800,15 @@ html:not(.js) .no-js\:is-hidden {
       --space-xxxxl: calc(7.59 * var(--space-unit)); } } }
 
 .container-outer {
+  --outer-container-column: 8.5%;
   display: grid;
-  grid-template-columns: 11.45% 1fr 11.45%; }
+  grid-template-columns: var(--outer-container-column) 1fr var(--outer-container-column); }
   .container-outer > * {
-    grid-column: 2; }
+    grid-column: 2;
+    background-color: green; }
+  @media (min-width: 48rem) {
+    .container-outer {
+      --outer-container-column: 11.45%; } }
 
 :root {
   --font-primary: 'Spartan', sans-serif;
@@ -6972,6 +6977,9 @@ mark {
 .form-label {
   font-size: var(--text-sm); }
 
+.header {
+  grid-column: span 3; }
+
 /* -------------------------------- 
 
 File#: _1_list
@@ -7053,15 +7061,42 @@ Usage: codyhouse.co/license
   border-top: 1px solid hsla(var(--color-contrast-higher-h), var(--color-contrast-higher-s), var(--color-contrast-higher-l), 0.15); }
 
 .nav-bar {
-  padding: 3.5rem 0;
+  --nav-bar-height: 6rem;
+  height: var(--nav-bar-height);
+  position: fixed;
+  width: calc(100% - 2 * var(--outer-container-column));
+  left: var(--outer-container-column);
   display: flex;
-  align-items: center; }
+  align-items: center;
+  justify-content: space-between; }
   .nav-bar__logo {
-    margin-right: 5.875rem; }
+    margin-right: 5.875rem;
+    height: 32px; }
 
 .nav {
+  background: var(--color-black-lighter);
+  padding: 48px;
+  position: absolute;
+  right: calc(-1.2 * var(--outer-container-column));
+  left: 0;
+  top: var(--nav-bar-height);
   display: grid;
-  grid-auto-flow: column;
-  gap: 3.5rem; }
+  row-gap: 2rem; }
+
+@media (min-width: 48rem) {
+  .nav-bar, .nav {
+    position: static; }
+  .nav-bar {
+    --nav-bar-height: 9.5rem;
+    width: 100%;
+    justify-content: start; }
+    .nav-bar__logo {
+      height: 40px; }
+  .nav {
+    grid-auto-flow: column;
+    background: inherit;
+    -moz-column-gap: 3.5rem;
+         column-gap: 3.5rem;
+    padding: 0; } }
 
 /*! purgecss end ignore */
