--- a/main/assets/css/components/_navigation.scss
+++ b/main/assets/css/components/_navigation.scss
@@ -1,5 +1,8 @@
+:root {
+ --nav-bar-height: 6rem;
+}
+
 .nav-bar {
-  --nav-bar-height: 6rem;
   height: var(--nav-bar-height);
   position: fixed;
   width: calc(100% - 2 * var(--outer-container-column)) ;
@@ -7,11 +10,18 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  z-index: var(--zindex-fixed-element);
 
   &__logo {
     margin-right: 5.875rem;
     height: 32px;
     }
+
+  & + .overlay {
+    top: var(--nav-bar-height);
+    opacity: 0;
+    visibility: hidden;
+  }
 }
 
 .nav {
@@ -21,19 +31,38 @@
   right: calc(-1.2 * var(--outer-container-column));;
   left: 0;
   top: var(--nav-bar-height);
-
+  transform: translateX(100%);
   display: grid;
   row-gap: 2rem;
+  transition: all 0.2s ease;
+  opacity: 1;
+}
+
+.nav-bar.open {
+ .nav {
+  transform: translateX(0%);
+  visibility: visible;
+  opacity: 1;
+ }
+
+ & + .overlay {
+  opacity: 1;
+  visibility: visible;
+ }
 }
 
 @include breakpoint(sm) {
 
-  .nav-bar, .nav {
+  :root {
+    --nav-bar-height: 9.5rem;
+  }
+
+  .nav-bar,
+  .nav {
     position: static;
   }
 
   .nav-bar {
-    --nav-bar-height: 9.5rem;
     width: 100%;
     justify-content: start;
 
@@ -47,5 +76,8 @@
      background: inherit;
      column-gap: 3.5rem;
      padding: 0;
+     visibility: visible;
+     opacity: 1;
+     transform: translateX(0%);
   }
 }
