--- a/main/assets/css/style.css
+++ b/main/assets/css/style.css
@@ -6804,8 +6804,7 @@ html:not(.js) .no-js\:is-hidden {
   display: grid;
   grid-template-columns: var(--outer-container-column) 1fr var(--outer-container-column); }
   .container-outer > * {
-    grid-column: 2;
-    background-color: green; }
+    grid-column: 2; }
   @media (min-width: 48rem) {
     .container-outer {
       --outer-container-column: 11.45%; } }
@@ -6977,6 +6976,19 @@ mark {
 .form-label {
   font-size: var(--text-sm); }
 
+.overlay {
+  content: '';
+  width: 100%;
+  height: 100vh;
+  background: hsla(var(--color-black-h), var(--color-black-s), var(--color-black-l), 0.8);
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: -1;
+  opacity: 1;
+  visibility: visible;
+  transition: all 0.2s; }
+
 .header {
   grid-column: span 3; }
 
@@ -7060,18 +7072,25 @@ Usage: codyhouse.co/license
 .list--border ul, .list--border ol {
   border-top: 1px solid hsla(var(--color-contrast-higher-h), var(--color-contrast-higher-s), var(--color-contrast-higher-l), 0.15); }
 
+:root {
+  --nav-bar-height: 6rem; }
+
 .nav-bar {
-  --nav-bar-height: 6rem;
   height: var(--nav-bar-height);
   position: fixed;
   width: calc(100% - 2 * var(--outer-container-column));
   left: var(--outer-container-column);
   display: flex;
   align-items: center;
-  justify-content: space-between; }
+  justify-content: space-between;
+  z-index: var(--zindex-fixed-element); }
   .nav-bar__logo {
     margin-right: 5.875rem;
     height: 32px; }
+  .nav-bar + .overlay {
+    top: var(--nav-bar-height);
+    opacity: 0;
+    visibility: hidden; }
 
 .nav {
   background: var(--color-black-lighter);
@@ -7080,14 +7099,28 @@ Usage: codyhouse.co/license
   right: calc(-1.2 * var(--outer-container-column));
   left: 0;
   top: var(--nav-bar-height);
+  transform: translateX(100%);
   display: grid;
-  row-gap: 2rem; }
+  row-gap: 2rem;
+  transition: all 0.2s ease;
+  opacity: 1; }
+
+.nav-bar.open .nav {
+  transform: translateX(0%);
+  visibility: visible;
+  opacity: 1; }
+
+.nav-bar.open + .overlay {
+  opacity: 1;
+  visibility: visible; }
 
 @media (min-width: 48rem) {
-  .nav-bar, .nav {
+  :root {
+    --nav-bar-height: 9.5rem; }
+  .nav-bar,
+  .nav {
     position: static; }
   .nav-bar {
-    --nav-bar-height: 9.5rem;
     width: 100%;
     justify-content: start; }
     .nav-bar__logo {
@@ -7097,6 +7130,9 @@ Usage: codyhouse.co/license
     background: inherit;
     -moz-column-gap: 3.5rem;
          column-gap: 3.5rem;
-    padding: 0; } }
+    padding: 0;
+    visibility: visible;
+    opacity: 1;
+    transform: translateX(0%); } }
 
 /*! purgecss end ignore */
