reduce complexity of code by switching the icon

--- a/main/assets/css/_custom-style.scss
+++ b/main/assets/css/_custom-style.scss
@@ -5,6 +5,7 @@
 // --------------------------------
 
 @import 'custom-style/colors';
+@import 'custom-style/mixins';
 @import 'custom-style/spacing';
 @import 'custom-style/shared-styles';
 @import 'custom-style/typography';
