layout for all screen sizes for header slide

--- a/main/assets/css/components/_navigation.scss
+++ b/main/assets/css/components/_navigation.scss
@@ -29,7 +29,7 @@
   background: var(--color-black-lighter);
   padding: 48px;
   position: absolute;
-  right: calc(-1.2 * var(--outer-container-column));;
+  right: calc(-1.2 * var(--outer-container-column));
   left: 0;
   top: var(--nav-bar-height);
   transform: translateX(100%);
