better with padding

--- a/main/assets/css/pages/_home.scss
+++ b/main/assets/css/pages/_home.scss
@@ -5,19 +5,14 @@ header {
 .slide {
   background: var(--slide-bg) no-repeat;
   background-size: cover;
-  display: grid;
-  grid-template-columns: var(--outer-container-column) minmax(19rem, 28.5rem) var(--outer-container-column);
-  grid-template-rows: 6.875rem 1fr 6.875rem;
-  > * {
-    grid-column: 2;
-    grid-row: 2;
-  }
+  padding: 6.875rem var(--outer-container-column);
 
   .text-component {
-    --text-vspace-multiplier: 0.2;
+    --text-vspace-multiplier: 1;
+    max-width: 19rem;
 
     > a {
-      margin-top: 1.8rem;
+      margin-top: 2.8rem;
     }
   }
 }
@@ -33,7 +28,11 @@ header {
   }
 
   .slide {
-    grid-template-columns: 3.625rem 29rem 1fr;
+    padding: 11.25rem 3.625rem;
+
+    .text-component {
+      max-width: 28.75rem;
+    }
   }
 
   #slide1 {
@@ -44,7 +43,7 @@ header {
 
 @include breakpoint(md) {
   .slide {
-   grid-template-columns: 11.875rem 29rem 1fr;
+    padding: 11.25rem  11.875rem;
   }
 
   #slide1 {
