--- a/main/assets/css/style.css
+++ b/main/assets/css/style.css
@@ -7012,7 +7012,16 @@ mark {
 header {
   margin-top: var(--nav-bar-height); }
 
+.slides {
+  overflow: hidden;
+  display: grid;
+  grid-auto-flow: column;
+  -ms-scroll-snap-type: x mandatory;
+      scroll-snap-type: x mandatory;
+  scroll-behavior: smooth; }
+
 .slide {
+  width: MIN(100vw, 69.375rem);
   background: linear-gradient(hsla(var(--color-black-h), var(--color-black-s), var(--color-black-l), 0.4), hsla(var(--color-black-h), var(--color-black-s), var(--color-black-l), 0.4)), var(--slide-bg) no-repeat;
   background-size: cover;
   padding: 6.875rem var(--outer-container-column); }
@@ -7025,6 +7034,15 @@ header {
 #slide1 {
   --slide-bg: url(../images/home/mobile/image-hero-paramour.jpg); }
 
+#slide2 {
+  --slide-bg: url(../images/home/mobile/image-hero-seraph.jpg); }
+
+#slide3 {
+  --slide-bg: url(../images/home/mobile/image-hero-federal.jpg); }
+
+#slide4 {
+  --slide-bg: url(../images/home/mobile/image-hero-trinity.jpg); }
+
 @media (min-width: 48rem) {
   header {
     margin-top: initial; }
@@ -7033,13 +7051,25 @@ header {
     .slide .text-component {
       max-width: 28.75rem; }
   #slide1 {
-    --slide-bg: url(../images/home/tablet/image-hero-paramour.jpg); } }
+    --slide-bg: url(../images/home/tablet/image-hero-paramour.jpg); }
+  #slide2 {
+    --slide-bg: url(../images/home/tablet/image-hero-seraph.jpg); }
+  #slide3 {
+    --slide-bg: url(../images/home/tablet/image-hero-federal.jpg); }
+  #slide4 {
+    --slide-bg: url(../images/home/tablet/image-hero-trinity.jpg); } }
 
 @media (min-width: 64rem) {
   .slide {
     padding: 11.25rem  11.875rem; }
   #slide1 {
-    --slide-bg: url(../images/home/desktop/image-hero-paramour.jpg); } }
+    --slide-bg: url(../images/home/desktop/image-hero-paramour.jpg); }
+  #slide2 {
+    --slide-bg: url(../images/home/desktop/image-hero-seraph.jpg); }
+  #slide3 {
+    --slide-bg: url(../images/home/desktop/image-hero-federal.jpg); }
+  #slide4 {
+    --slide-bg: url(../images/home/desktop/image-hero-trinity.jpg); } }
 
 /* -------------------------------- 
 
