--- a/main/assets/css/pages/_home.scss
+++ b/main/assets/css/pages/_home.scss
@@ -113,7 +113,7 @@ header {
     left: -78px;
     display: flex;
 
-     a {
+     a:not(:last-child) {
        border-right: 1px solid var(--color-black-lighter);
     }
   }
