--- a/main/assets/css/style.css
+++ b/main/assets/css/style.css
@@ -7082,7 +7082,7 @@ header {
     bottom: 0px;
     left: -78px;
     display: flex; }
-    .slide-nav a {
+    .slide-nav a:not(:last-child) {
       border-right: 1px solid var(--color-black-lighter); } }
 
 /* -------------------------------- 
