--- a/main/assets/css/custom-style/_shared-styles.scss
+++ b/main/assets/css/custom-style/_shared-styles.scss
@@ -1,17 +1,18 @@
 .container-outer {
-  --outer-container-column: 8.5%;
+  --outer-container-column: 8.5vw;
   --min: calc(375px - 2 * (var(--outer-container-column)));
   max-width: 1440px;
   margin: 0 auto;
+
   display: grid;
   grid-template-columns: var(--outer-container-column) minmax(var(--min), 1110px) var(--outer-container-column);
 
   > * {
-    grid-column: 2;
+    grid-column: 2; //put every child element in the second column
   }
 
   @include breakpoint(sm) {
-    --outer-container-column: 11.45%;
+    --outer-container-column: 11.25vw;
   }
 }
 
