--- a/main/assets/css/style.css
+++ b/main/assets/css/style.css
@@ -6807,7 +6807,7 @@ html:not(.js) .no-js\:is-hidden {
       --space-xxxxl: calc(7.59 * var(--space-unit)); } } }
 
 .container-outer {
-  --outer-container-column: 8.5%;
+  --outer-container-column: 8.5vw;
   --min: calc(375px - 2 * (var(--outer-container-column)));
   max-width: 1440px;
   margin: 0 auto;
@@ -6817,7 +6817,7 @@ html:not(.js) .no-js\:is-hidden {
     grid-column: 2; }
   @media (min-width: 48rem) {
     .container-outer {
-      --outer-container-column: 11.45%; } }
+      --outer-container-column: 11.25vw; } }
 
 :root {
   --font-primary: 'Spartan', sans-serif;
@@ -7016,35 +7016,34 @@ header {
   position: relative; }
 
 .slides {
-  overflow: hidden;
   display: grid;
   grid-auto-flow: column;
+  align-items: start;
   -ms-scroll-snap-type: x mandatory;
       scroll-snap-type: x mandatory;
+  overflow-x: scroll;
   scroll-behavior: smooth; }
 
 .slide {
-  width: MIN(100vw, 69.375rem);
-  background: linear-gradient(hsla(var(--color-black-h), var(--color-black-s), var(--color-black-l), 0.4), hsla(var(--color-black-h), var(--color-black-s), var(--color-black-l), 0.4)), var(--slide-bg) no-repeat;
-  background-size: cover;
-  padding: 6.875rem var(--outer-container-column); }
+  scroll-snap-align: center;
+  width: 100vw;
+  padding: 6.875rem var(--outer-container-column);
+  position: relative;
+  background: linear-gradient(hsla(var(--color-black-h), var(--color-black-s), var(--color-black-l), 0.4), hsla(var(--color-black-h), var(--color-black-s), var(--color-black-l), 0.4)); }
+  .slide img {
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: -1;
+    width: 100%;
+    height: 100%;
+    -o-object-fit: cover;
+       object-fit: cover; }
   .slide .text-component {
     --text-vspace-multiplier: 1;
     max-width: 19rem; }
     .slide .text-component > a {
       margin-top: 2.8rem; }
-
-#slide1 {
-  --slide-bg: url(../images/home/mobile/image-hero-paramour.jpg); }
-
-#slide2 {
-  --slide-bg: url(../images/home/mobile/image-hero-seraph.jpg); }
-
-#slide3 {
-  --slide-bg: url(../images/home/mobile/image-hero-federal.jpg); }
-
-#slide4 {
-  --slide-bg: url(../images/home/mobile/image-hero-trinity.jpg); }
 
 .slide-nav {
   display: none; }
@@ -7053,29 +7052,14 @@ header {
   header {
     margin-top: initial; }
   .slide {
-    padding: 11.25rem 3.625rem; }
+    padding: 11.25rem 3.625rem;
+    width: calc(100vw - 2 * var(--outer-container-column)); }
     .slide .text-component {
-      max-width: 28.75rem; }
-  #slide1 {
-    --slide-bg: url(../images/home/tablet/image-hero-paramour.jpg); }
-  #slide2 {
-    --slide-bg: url(../images/home/tablet/image-hero-seraph.jpg); }
-  #slide3 {
-    --slide-bg: url(../images/home/tablet/image-hero-federal.jpg); }
-  #slide4 {
-    --slide-bg: url(../images/home/tablet/image-hero-trinity.jpg); } }
+      max-width: 28.75rem; } }
 
 @media (min-width: 64rem) {
   .slide {
     padding: 11.25rem  11.875rem; }
-  #slide1 {
-    --slide-bg: url(../images/home/desktop/image-hero-paramour.jpg); }
-  #slide2 {
-    --slide-bg: url(../images/home/desktop/image-hero-seraph.jpg); }
-  #slide3 {
-    --slide-bg: url(../images/home/desktop/image-hero-federal.jpg); }
-  #slide4 {
-    --slide-bg: url(../images/home/desktop/image-hero-trinity.jpg); }
   .slide-nav {
     position: absolute;
     border-bottom: 1px solid var(--color-black-lighter);
