--- a/main/assets/css/custom-style/_shared-styles.scss
+++ b/main/assets/css/custom-style/_shared-styles.scss
@@ -14,6 +14,10 @@
   @include breakpoint(sm) {
     --outer-container-column: 11.25vw;
   }
+
+    @include breakpoint(md) {
+    --outer-container-column: 10.3125rem;
+  }
 }
 
 
