use min max to give more dynamic control

--- a/main/assets/css/custom-style/_shared-styles.scss
+++ b/main/assets/css/custom-style/_shared-styles.scss
@@ -16,7 +16,7 @@
   }
 
     @include breakpoint(md) {
-    --outer-container-column: 10.3125rem;
+    --outer-container-column: MIN(10.3125rem, 11.45vw);
   }
 }
 
