--- a/main/assets/css/pages/_home.scss
+++ b/main/assets/css/pages/_home.scss
@@ -6,6 +6,15 @@ header {
   position: relative;
 }
 
+.slider{
+    // display: grid;
+    // grid-auto-flow: column;
+    // align-items: start;
+    // scroll-snap-type: x mandatory;
+    // overflow-x: scroll;
+    // scroll-behavior: smooth;
+  }
+
 .slide {
   scroll-snap-align: center;
   width: 100vw;
